# cargo-man

./: .gitignore  Cargo.toml  README.md
src/: command.rs  error.rs  main.rs  manifest.rs  version.rs
src/handle/: bump.rs  mod.rs  read.rs  write.rs
