[dependencies]
clap = "2.33.3"
serde = "1.0.126"
serde_derive = "1.0.126"
itertools = "0.10.1"
text_io = "0.1.9"

[dependencies.toml]
version = "0.5.8"
features = ["preserve_order"]

[package]
edition = "2018"
name = "cargo-man"
version = "0.1.2"
license = "MIT"
description = "CLI tool to improve Cargo file management."
